5 files modified, 15 added, 7 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <h1>SERVICE HUB</h1>
-<app-dashboard></app-dashboard>
-<app-scan-form></app-scan-form>
+<app-multifilter></app-multifilter>
+<app-scandetails></app-scandetails>
+
+<router-outlet></router-outlet>
+
 
 
