--- a/src/app/scan-form/scan-form.component.html
+++ b/src/app/scan-form/scan-form.component.html
@@ -1,3 +1,5 @@
+<h2>CREATE SCAN</h2>
+<br />
 <div class="container">
   <div [hidden]="submitted">
     <form (ngSubmit)="onSubmit()" #scanForm="ngForm">
